# AndroidFFmpegPlayer

./: README.md  Test.md  build.gradle  gradle.properties  settings.gradle  tree.txt
app/: build.gradle
app/src/androidTest/java/com/example/motro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-ffmpeg-jni.cpp  native-lib.cpp
app/src/main/cpp/native/: NativePlayer.cpp  NativePlayer.h  NativeYuvGlRenderer.cpp  NativeYuvGlRenderer.h  PlayerOptions.cpp  PlayerOptions.h  PlayerRemuxRecorder.cpp  PlayerRemuxRecorder.h  SnapshotManager.cpp  SnapshotManager.h  VideoRenderer.cpp  VideoRenderer.h
app/src/main/java/com/example/motro/: ExoplayerPlayerActivity.java  MediaPlayerActivity.java  MediacodecPlayerActivity.java  PlayerLauncherActivity.java
app/src/main/java/com/example/motro/ffmpeg/: FFmpegNative.java  JavaMediaCodecExperiment.java
app/src/main/res/layout/: activity_exoplayer_player.xml  activity_media_player.xml  activity_mediacodec_player.xml  activity_player_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/motro/: ExampleUnitTest.kt
ffmpegplayer/: build.gradle  consumer-rules.pro
gradle/wrapper/: gradle-wrapper.properties
repo/: lib-SecurityApi-release.aar
